<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:layout_margin="5dp"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/rlview"
            android:layout_height="wrap_content">


            <ImageView
                android:src="@drawable/ic_launcher_background"
                android:layout_margin="5dp"
                android:id="@+id/itemImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/tvVeg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@id/itemImage"
                android:text="@string/potato_mandi_rates"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvVeg"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@id/itemImage"
                android:text="@string/yeshwanthapura_mandi_bangalore_ka"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAddress"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@id/itemImage"
                android:text="@string/_18_06_22"
                android:textColor="@color/black" />


            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDate"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/itemImage"
                android:text="@string/rs_20_21_1_kg"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDate"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:text="Updated at 10:36 AM"
                android:textColor="@color/black"
                android:textSize="10sp" />
        </RelativeLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_below="@id/rlview"
            android:background="@color/colorGrey" />

        <LinearLayout

            android:id="@+id/btnShare"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/view"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/style1"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_baseline_share_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:text="Share"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout

            android:id="@+id/btnInterested"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/view"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/style"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_baseline_send_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:text="Interested"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>